telepathy-gabble (0.14.1-1) UNRELEASED; urgency=low

  * New upstream stable release (Closes: #656601)
  * Specifically mention Facebook Chat in the Description (Closes: #650459)

 -- Simon McVittie <smcv@debian.org>  Thu, 26 Jan 2012 14:31:39 +0000

telepathy-gabble (0.13.7-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 15 Oct 2011 18:19:53 +0100

telepathy-gabble (0.13.6-1) unstable; urgency=low

  * New upstream release.

 -- Jonny Lamb <jonny@debian.org>  Wed, 05 Oct 2011 11:26:52 +0100

telepathy-gabble (0.13.5-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 25 Aug 2011 16:20:24 +0100

telepathy-gabble (0.13.3-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 30 Jul 2011 16:31:03 +0100

telepathy-gabble (0.13.2-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 24 Jun 2011 21:27:49 +0200

telepathy-gabble (0.13.0-1) unstable; urgency=low

  * New upstream release.

 -- Jonny Lamb <jonny@debian.org>  Tue, 07 Jun 2011 10:17:18 +0100

telepathy-gabble (0.12.0-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 14 May 2011 16:18:16 +0100

telepathy-gabble (0.11.10-1) experimental; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Tue, 05 Apr 2011 17:17:28 +0200

telepathy-gabble (0.11.8-1) experimental; urgency=low

  * New upstream release.

 -- Jonny Lamb <jonny@debian.org>  Mon, 14 Mar 2011 15:55:51 +0000

telepathy-gabble (0.11.7-1) experimental; urgency=low

  [ Laurent Bigonville ]
  * debian/control: Bump libtelepathy-glib-dev version to 0.13.10

  [ Jonny Lamb ]
  * New upstream release.
  * debian/control: Bump tp-glib build-dep version to 0.13.12.

 -- Jonny Lamb <jonny@debian.org>  Thu, 17 Feb 2011 09:35:16 +0000

telepathy-gabble (0.11.6-1) experimental; urgency=low

  * New upstream release.
