@@ -8,7 +8,7 @@ Uploaders: Dafydd Harries <daf@debian.org>,
            Sjoerd Simons <sjoerd@debian.org>,
            Jonny Lamb <jonny@debian.org>
 Build-Depends: autotools-dev (>= 20100122.1~),
-               debhelper (>= 8),
+               debhelper (>= 9),
                gnutls-bin,
                libdbus-1-dev (>= 1.1.0),
                libdbus-glib-1-dev (>= 0.82),
