@@ -2,6 +2,8 @@ telepathy-gabble (0.14.1-1) UNRELEASED; urgency=low
 
   * New upstream stable release (Closes: #656601)
   * Specifically mention Facebook Chat in the Description (Closes: #650459)
+  * Use debhelper 9, for better debug symbols and hardened build flags
+    (Closes: #656517)
 
  -- Simon McVittie <smcv@debian.org>  Thu, 26 Jan 2012 14:31:39 +0000
 
